--- a/ide/IDE/public/stylesheet.css
+++ b/ide/IDE/public/stylesheet.css
@@ -108,6 +108,21 @@ p {
     margin-right: 5px;
     visibility: hidden;
 }
+#iDocsLink{
+	float: left;
+    margin-left: -23px;
+    background: url("images/icons/exclamation.png");
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+#iDocsLink.iDocsVisible{
+	opacity: 1;
+	transform: scale(1);
+}
 
 #beaglert-console{
 	width: 100%;
@@ -518,6 +533,18 @@ hr.sep {
 #saveAsName{
 	height: 8px;
 }
+.bela-ace-highlight{
+	position: absolute;
+	pointer-events: all;
+	cursor: pointer;
+	border-bottom: 1px solid black;
+	height: 14px!important;
+	opacity: 0.1;
+	transition: opacity 0.1s ease-out;
+}
+.bela-ace-highlight:hover{
+	opacity: 1;
+}
 
 #img-display-parent, #pd-svg-parent{
 	display: 'none';
@@ -743,7 +770,7 @@ right: calc(100% - 62px);
     }
 
     .tab h2 {
-    	font-family: sofia, sans-serif;
+    	font-family: inconsolata, monospaced;
     	font-size: 16px;
     	color: #A8E2AD;
     	line-height: 30px;
