--- a/ide/IDE/public/scope/stylesheet.css
+++ b/ide/IDE/public/scope/stylesheet.css
@@ -119,7 +119,7 @@ html, body{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 3;
+	z-index: 4;
 	text-align: center;
 	padding: 5px;
 }
@@ -159,17 +159,27 @@ html, body{
   }
 }
 
-.scopeChannel, #scopeBG{
+.scopeChannel, #scopeBG, #inactive-overlay{
 	position: absolute;
 	top: 0;
 	left: 0;
 }
-#scope, #scopeBG{
+#scope, #scopeBG, #inactive-overlay{
 	width: 100%;
 	height: 100%;
 }
 #scopeBG{
 	z-index: -1;
+}
+#inactive-overlay{
+	z-index: 2;
+	background: black;
+	opacity: 0;
+	transition: opacity 0.1s linear;
+	pointer-events: none;
+}
+#inactive-overlay.inactive-overlay-visible{
+	opacity: 0.15;
 }
 
 #controlPanel{
@@ -178,7 +188,7 @@ html, body{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 2;
+	z-index: 3;
 	padding: 50px 50px 0 50px;
 	box-sizing: border-box;
 }
