more efficient mode switch detector, with live count on toolbar (closes #92)

--- a/ide/IDE/public/stylesheet.css
+++ b/ide/IDE/public/stylesheet.css
@@ -404,6 +404,8 @@ p {
 		float: left;
 		color: #424242;
 		text-align: right;
+		font-family: inconsolata;
+		margin-top: 2px;
 	}
 		.status-text:nth-child(3) {
 			margin-right: 0;
