--- a/ide/IDE/public/stylesheet.css
+++ b/ide/IDE/public/stylesheet.css
@@ -279,7 +279,7 @@ p {
 	transition: transform 0.2s ease-out, background-color 1s ease-out, -webkit-transform 0.2s ease-out;
 }
 
-.beaglert-console-ierror, .beaglert-console-iwarning, .beaglert-console-warning, .beaglert-console-error{
+.beaglert-console-ierror, .beaglert-console-iwarning, .beaglert-console-error{
 	cursor: pointer;
 	-webkit-transition: -webkit-transform 0.1s ease-out;
 	transition: -webkit-transform 0.1s ease-out;
