allow console messages to be scrolled sideways if they are longer than the screen width

--- a/ide/IDE/public/stylesheet.css
+++ b/ide/IDE/public/stylesheet.css
@@ -149,6 +149,9 @@ p {
 #beaglert-consoleWrapper span{
 	white-space: pre;
 }
+#beaglert-consoleWrapper>div{
+	overflow-x: auto;
+}
 /*.beaglert-console-log-in::before{
 	content: '>';
 	color: inherit;
