--- a/IDE/public/diagramStyle.css
+++ b/IDE/public/diagramStyle.css
@@ -5,25 +5,53 @@
     font-weight: normal;
     font-style: normal;
 }
+body {
+    margin: 0;
+ }
+
+#wrapper {
+    background: #eee;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+ }
 
 #container {
-    align: left;
-    overflow: auto;
+    width: 400px;
+    margin: 0 auto;
+    background: #fff;
+}
+
+#title {
+    margin: 0 auto;
 }
 
 #image {
-    width: 350px;
-    text-align: left;
-    margin: 10px auto 40px;
-    padding-bottom: 40px;
-    padding-left: 30px;
-    overflow: auto;
+    width: 400px;
+    text-align: center;
+    margin: 0 auto 0;
 }
 
-.diagram_text {
-    font-family: sofia;
-    font-size: 12px;
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+    width: 80%;
+}
+
+h1 {
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
     line-height: 22px;
+    font-weight: bold;
+    padding: 20px 0 0 20px;
+}
+p {
+    font-family: Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: lighter;
+    margin: 0 0 0 20px;
 }
 
 .dPin {
@@ -46,7 +74,7 @@
     stroke: none;
 }
 .comms {
-    fill: rgba(0, 0, 255, 0.5); 
+    fill: rgba(0, 0, 255, 0.5);
     stroke: none;
 }
 .audio {
@@ -65,6 +93,10 @@
     fill: rgba(0, 255, 0, 0.6);
     stroke: none;
 }
+.caution {
+    fill: rgba(255, 14, 154, 0.7);
+    stroke: rgb(255, 0, 0);
+}
 /*
 
 
@@ -72,7 +104,7 @@
     fill: rgba(255, 255, 0, 0.3);
     stroke: none;
 }
-header .hi { 
+header .hi {
     background-color: rgba(255, 255, 0, 0.3);
     line-height: 25px;
     }
@@ -118,7 +150,6 @@ li.cust {
 .tooltip {
 
 }
-
 
 
 .tooltipster-content {
