--- a/IDE/public/diagramStyle.css
+++ b/IDE/public/diagramStyle.css
@@ -5,53 +5,25 @@
     font-weight: normal;
     font-style: normal;
 }
-body {
-    margin: 0;
- }
-
-#wrapper {
-    background: #eee;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
- }
 
 #container {
-    width: 400px;
-    margin: 0 auto;
-    background: #fff;
-}
-
-#title {
-    margin: 0 auto;
+    align: left;
+    overflow: auto;
 }
 
 #image {
-    width: 400px;
-    text-align: center;
-    margin: 0 auto 0;
+    width: 350px;
+    text-align: left;
+    margin: 10px auto 40px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    overflow: auto;
 }
 
-hr {
-    border: 0;
-    height: 1px;
-    background: #333;
-    background-image: linear-gradient(to right, #ccc, #333, #ccc);
-    width: 80%;
-}
-
-h1 {
-    font-family: Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: bold;
-    padding: 20px 0 0 20px;
-}
-p {
-    font-family: Helvetica, sans-serif;
+.diagram_text {
+    font-family: sofia;
     font-size: 12px;
-    font-weight: lighter;
-    margin: 0 0 0 20px;
+    line-height: 22px;
 }
 
 .dPin {
@@ -74,7 +46,7 @@ p {
     stroke: none;
 }
 .comms {
-    fill: rgba(0, 0, 255, 0.5);
+    fill: rgba(0, 0, 255, 0.5); 
     stroke: none;
 }
 .audio {
@@ -104,7 +76,7 @@ p {
     fill: rgba(255, 255, 0, 0.3);
     stroke: none;
 }
-header .hi {
+header .hi { 
     background-color: rgba(255, 255, 0, 0.3);
     line-height: 25px;
     }
@@ -150,6 +122,7 @@ li.cust {
 .tooltip {
 
 }
+
 
 
 .tooltipster-content {
