--- a/ide-redesign/styles/_console.scss
+++ b/ide-redesign/styles/_console.scss
@@ -1,163 +1,155 @@
-#beaglert-console{
-	width: 100%;
+#beaglert-console {
+  background-color: white;
+  box-sizing: border-box;
+  font-family: inconsolata, monospace;
+  font-size: 12px;
 	height: 100%;
 	position: relative;
 	overflow-x: hidden;
 	overflow-y: auto;
-	box-sizing: border-box;
-	background-color: white;
-	font-family: inconsolata, monospace;
+  width: 100%;
 }
-#beaglert-consoleForm{
+#beaglert-consoleForm {
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-top: 1px solid black;
 	height: 21px;
-	border-top: 1px solid black;
-	border-bottom: 1px solid rgba(0,0,0,0.2);
 }
-#beaglert-consoleWrapper{
-	width: 100%;
-	font-size: 10pt;
+#beaglert-consoleWrapper {
 	overflow-x: auto;
+  width: 100%;
 }
-#beaglert-consoleWrapper span{
+#beaglert-consoleWrapper span {
 	white-space: pre-wrap;
 }
-#beaglert-consoleWrapper>div{
+#beaglert-consoleWrapper > div {
+  box-sizing: border-box;
 	display: inline-block;
-    min-width: 100%;
-	box-sizing: border-box;
+  min-width: 100%;
 }
-/*.beaglert-console-log-in::before{
-	content: '>';
-	color: inherit;
-	padding-right: 0.65em;
-	opacity: 0.6;
-}*/
-.beaglert-console-log-in{
-	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+.beaglert-console-log-in {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 4px 30px;
+  text-indent: -1.65em;
 }
-.beaglert-console-shell::before{
+.beaglert-console-shell::before {
 	content: '#';
 	color: inherit;
+  margin: 0 14px;
+  opacity: 0.6;
 	padding-right: 0.65em;
-	opacity: 0.6;
-	margin: 0 14px;
 }
-.beaglert-console-shell{
-	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+.beaglert-console-shell {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgb(96, 96, 150);
 	padding: 4px 30px;
-	color: rgb(96, 96, 150);
+  text-indent: -1.65em;
 }
-.beaglert-console-git::before{
+.beaglert-console-git::before {
+  color: inherit;
 	content: 'git:';
-	color: inherit;
-	padding-right: 0.65em;
-	opacity: 0.6;
 	margin: 0 7px;
+  opacity: 0.6;
+  padding-right: 0.65em;
 }
-.beaglert-console-git{
+.beaglert-console-git {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgb(96, 150, 96);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	color: rgb(96, 150, 96);
 }
-.beaglert-console-make::before{
+.beaglert-console-make::before {
+  color: inherit;
 	content: 'make:';
-	color: inherit;
+  opacity: 0.6;
 	padding-right: 0.65em;
-	opacity: 0.6;
 }
-.beaglert-console-make{
-	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+.beaglert-console-make {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 4px 30px;
+  text-indent: -1.65em;
 }
-.beaglert-console-bela::before{
+.beaglert-console-bela::before {
+  color: inherit;
 	content: 'bela:';
-	color: inherit;
+  opacity: 0.6;
 	padding-right: 0.65em;
-	opacity: 0.6;
 }
-.beaglert-console-bela{
+.beaglert-console-bela {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgb(64, 100, 100);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	color: rgb(64, 100, 100);
 }
-.beaglert-console-log{
+.beaglert-console-log {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 4px 30px;
 }
-.beaglert-console-warning::before{
+.beaglert-console-warning::before {
+  color: yellow;
 	content: '!';
-	color: yellow;
+  margin: 0 14px;
 	padding-right: 0.65em;
-	margin: 0 14px;
 }
-.beaglert-console-warning{
+.beaglert-console-warning {
+  background-color: rgba(255, 255, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	background-color: rgba(255, 255, 0, 0.2);
 }
-.beaglert-console-error::before{
+.beaglert-console-error::before {
+  color: red;
 	content: '!';
-	color: red;
+  margin: 0 14px;
 	padding-right: 0.65em;
-	margin: 0 14px;
 }
-.beaglert-console-error{
+.beaglert-console-error {
+  background-color: rgba(255, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	background-color: rgba(255, 0, 0, 0.2);
 }
 
-.beaglert-console-iwarning::before{
+.beaglert-console-iwarning::before {
+  color: red;
 	content: '!';
-	color: red;
+  margin: 0 14px;
 	padding-right: 0.65em;
-	margin: 0 14px;
 }
-.beaglert-console-iwarning{
+.beaglert-console-iwarning {
+  background-color: rgba(255, 255, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	background-color: rgba(255, 255, 0, 0.2);
 }
-.beaglert-console-ierror::before{
+.beaglert-console-ierror::before {
+  color: red;
 	content: '!';
-	color: red;
+  margin: 0 14px;
 	padding-right: 0.65em;
-	margin: 0 14px;
 }
-.beaglert-console-ierror{
+.beaglert-console-ierror {
+  background-color: rgba(255, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 4px 30px;
 	text-indent: -1.65em;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 4px 30px;
-	background-color: rgba(255, 0, 0, 0.2);
 }
-.beaglert-console-notify::before{
+.beaglert-console-notify::before {
+  color: green;
 	content: 'i';
-	color: green;
+  margin: 0 14px;
 	padding-right: 0.65em;
-	margin: 0 14px;
 }
-.beaglert-console-notify{
+.beaglert-console-notify {
 	text-indent: -1.65em;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 4px 30px;
 	background-color: rgba(0, 255, 0, 0.2);
-	-webkit-transition: background-color 1s ease-out, -webkit-transform 0.2s ease-out;
 	transition: background-color 1s ease-out, -webkit-transform 0.2s ease-out;
 	transition: transform 0.2s ease-out, background-color 1s ease-out;
 	transition: transform 0.2s ease-out, background-color 1s ease-out, -webkit-transform 0.2s ease-out;
 }
 
 .beaglert-console-ierror, .beaglert-console-iwarning, .beaglert-console-error{
-	-webkit-transition: -webkit-transform 0.1s ease-out;
 	transition: -webkit-transform 0.1s ease-out;
 	transition: transform 0.1s ease-out;
 	transition: transform 0.1s ease-out, -webkit-transform 0.1s ease-out;
@@ -168,8 +160,7 @@
 }
 
 .beaglert-console-collapsed{
-	-webkit-transform: scaleY(0);
-	        transform: scaleY(0);
+  transform: scaleY(0);
 }
 .beaglert-console-faded{
 	background-color: rgba(255, 255, 255, 0.2);
@@ -184,35 +175,34 @@
 	padding-right: 0.65em;
 }
 
-#beaglert-console-inputRight{
+#beaglert-console-inputRight {
 	display: table-cell;
 	width: 100%;
 }
-#beaglert-console-inputLeft{
+#beaglert-console-inputLeft {
 	display: table-cell;
 }
 
-#beaglert-consoleInput{
+#beaglert-consoleInput {
+  background-color: inherit;
+  border: inherit;
+  color: inherit;
+  font-family: inconsolata;
+  height: 100%;
+  padding: 5px 5px;
 	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: inherit;
-	border: inherit;
-	color: inherit;
-	padding: 5px 5px;
-	font-family: inconsolata;
+  width: 100%;
 }
 #beaglert-consoleInput:focus {
-    outline-width: 0;
+  outline-width: 0;
 }
-#beaglert-consoleInput-pre{
+#beaglert-consoleInput-pre {
 	color: inherit;
+  display: inline;
 	font-family: inconsolata;
-	font-size: 0.8em;
-	display: inline;
-    white-space: nowrap;
+	// font-size: 0.8em;
+  opacity: 0.2;
 	padding: 5px;
-	opacity: 0.2;
-	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
+  white-space: nowrap;
 }
