--- a/ide-redesign/styles/_example-list.scss
+++ b/ide-redesign/styles/_example-list.scss
@@ -1,10 +1,12 @@
-.projectManager {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  .example-list {
-    li {
-      cursor: pointer;
+ul {
+  &.projectManager {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    .example-list {
+      li {
+        cursor: pointer;
+      }
     }
   }
 }
