--- a/ide-redesign/styles/_pins.scss
+++ b/ide-redesign/styles/_pins.scss
@@ -1,60 +1,62 @@
 #pin_container {
-    align: left;
-    overflow: auto;
-}
-
-#image {
-    width: auto;
+  height: calc(100vh - 200px);
+  overflow: hidden;
+  object {
+    height: 100%;
+    width: 100%;
+  }
+  #image {
     height: auto;
-    text-align: left;
-    margin: 10px auto 0;
-    padding-bottom: 40px;
-    padding-left: 30px;
+    margin: 0;
     overflow: auto;
-}
+    padding: 0;
+    text-align: left;
+    width: auto;
+  }
 
-.diagram_text {
+  .diagram_text {
     font-family: poppins_light;
     font-size: inherit;
     line-height: 12px;
-}
+  }
 
-.dPin {
+  .dPin {
     fill: rgba(0, 255, 0, 0.5);
     stroke: none;
-}
-.new {
+  }
+  .new {
     fill: rgb(255, 0, 0);
-}
-.gnd {
+  }
+  .gnd {
     fill: rgba(255, 0, 0, 0.4);
     stroke: rgb(255, 0, 0);
-}
-.aPin {
+  }
+  .aPin {
     fill: rgba(255, 255, 0, 0.5);
     stroke: none;
-}
-.aInPin {
+  }
+  .aInPin {
     fill: rgba(255, 165, 0, 0.6);
     stroke: none;
-}
-.comms {
-    fill: rgba(0, 0, 255, 0.5); 
+  }
+  .comms {
+    fill: rgba(0, 0, 255, 0.5);
     stroke: none;
-}
-.audio {
+  }
+  .audio {
     fill: rgba(155, 48, 255, 0.5);
     stroke: none;
-}
-.pins{
+  }
+  .pins{
     fill: transparent;
     stroke: #000;
-}
-.util {
+  }
+  .util {
     fill: rgba(255, 14, 154, 0.5);
     stroke: none;
-}
-.led {
+  }
+  .led {
     fill: rgba(0, 255, 0, 0.6);
     stroke: none;
+  }
 }
