--- a/ide-redesign/styles/_buttons.scss
+++ b/ide-redesign/styles/_buttons.scss
@@ -1,43 +1,47 @@
 button {
+  border-bottom: 2px solid rgba(0, 190, 164, 1.0);
+  border-left: rgba(0, 190, 164, 0.4);
+  border-right: rgba(0, 190, 164, 0.4);
 	border-top: rgba(0, 190, 164, 0.4);
-	border-left: rgba(0, 190, 164, 0.4);
-	border-right: rgba(0, 190, 164, 0.4);
-	border-bottom: 2px solid rgba(0, 190, 164, 1.0);
 	background-color: rgba(0, 190, 164, 0.4);
+  border-radius: 2px;
+  cursor: pointer;
+  font-family: poppins_light;
 	padding: 6px 12px;
-	font-family: poppins_light;
-	border-radius: 2px;
-	cursor: pointer;
-
+  &.active {
+    color: rgba(0, 0, 0, 0.4);
+    &:hover {
+      color: rgba(0, 0, 0, 0.4);
+    }
+  }
 	&:hover {
 		background-color: rgba(0, 190, 164, 0.7	);
 		color: rgba(255,255,255,0.9);
 		transition: 0.1s ease-in-out;
-		
 	}
 	&.create-project {
 		font-size: 14px;
 		margin-top: -1px;
 		padding-right: 20px;
-        &:hover {
-        	color: $white;
-        }
+    &:hover {
+    	color: $white;
+    }
 		&:before {
+      color: rgba(0, 0, 0, 0.4);
 			content: '+'; /* Unicode character for "plus" sign (+) */
 			font-family: space_bold;
 			font-size: 36px;
 			line-height: 20px;
-			vertical-align: middle;
-	        color: rgba(0, 0, 0, 0.4);
-	        margin-right: 5px;
+      margin-right: 5px;
+      vertical-align: middle;
 		}
 	}
 	&:disabled {
 		background-color: rgba(0, 0, 0, 0.1); // Background
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    border-left: rgba(0, 0, 0, 0.1);
+    border-right: rgba(0, 0, 0, 0.1);
+    border-top: rgba(0, 0, 0, 0.1);
 		color: rgba(0, 0, 0,0.9); // Text colour
-		border-top: rgba(0, 0, 0, 0.1);
-		border-left: rgba(0, 0, 0, 0.1);
-		border-right: rgba(0, 0, 0, 0.1);
-		border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 	}
 }
