--- a/ide-redesign/styles/_toolbar.scss
+++ b/ide-redesign/styles/_toolbar.scss
@@ -1,3 +1,16 @@
+@keyframes running-button {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.running-button {
+  animation: running-button 2s linear infinite;
+}
+
 .toolbar {
   background: $grey-toolbar;
   bottom: 0;
@@ -83,7 +96,7 @@
     width: 81px;
   }
   .toolbar-functions {
-    min-width: 150px;
+    // min-width: 150px;
     padding: 2px 0;
   }
   .system-status-text {
